# smallgraphlib

./: .gitignore  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml
doc/: Makefile
doc/source/: conf.py  smallgraphlib.rst
smallgraphlib/: __init__.py  automatons.py  basic_graphs.py  core.py  custom_types.py  flow.py  flow_networks.py  graph.py  graphs_constructors.py  huffman.py  labeled_graph.py  labeled_graphs.py  latex_export.py  markov_chain.py  string2automaton.py  tikz_export.py  trees.py  utilities.py  weighted_graphs.py
smallgraphlib/printers/: latex.py  tikz.py
tests/: test_automaton.py  test_constructors.py  test_dfs_bfs.py  test_export_tikz.py  test_flow.py  test_graph.py  test_huffman.py  test_labeledgraph.py  test_latex_export.py  test_markov_chain.py  test_smallgraphlib.py  test_tikz_export.py  test_utilities.py  test_weightedgraph.py
tests/ptyx-tikz/: Makefile  demo.ptyx
