[tool.poetry]
name = "smallgraphlib"
version = "0.6.1"
description = "Simple library for handling small graphs, including Tikz code generation."
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
repository = "https://github.com/wxgeo/smallgraphlib"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["graph", "tikz", "latex"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7"
mypy = "^1.0"
flake8 = "^6"
black = "^22.1.0"
tox = "^4.1.2"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-rtd-theme = "^1.0.0"#
myst-parser = "^0.18.0"
# To test compatibility with sympy.
sympy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
implicit_optional = true

[tool.black]
line-length = 110

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run black smallgraphlib tests
    poetry run pytest tests
    poetry run mypy smallgraphlib tests
    poetry run flake8 --max-line-length 110 --ignore=E203,W503,W391
"""
