[tool.poetry]
name = "smallgraphlib"
version = "0.10.0"
description = "Simple library for handling small graphs, including Tikz code generation."
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
repository = "https://github.com/wxgeo/smallgraphlib"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["graph", "tikz", "latex"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
mypy = "^1.8"
black = "^22.1.0"
tox = "^4.1.2"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-rtd-theme = "^1.0.0"#
myst-parser = "^0.18.0"
# To test compatibility with sympy.
sympy = "^1.10.1"
# Version 7.29+ are buggy !
python-semantic-release = "7.28.1"
ruff = "^0.3.2"
numpy = "^1.26.4"
pytest-pythonhashseed = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.mypy]
implicit_optional = true
warn_unused_ignores = true

[tool.black]
line-length = 110

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"

[tool.ruff]
line-length = 110
fix = true

[tool.ruff.lint]
ignore = ["E203"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_latex_export.py" = ["E501"]


[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py311

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run black smallgraphlib tests
    poetry run ruff check smallgraphlib tests
    poetry run pytest --pythonhashseed 0 tests
    poetry run pytest --doctest-modules
    poetry run mypy smallgraphlib tests
"""
