[project]
name = "smallgraphlib"
version = "1.1.0"
description = "Simple library for handling small graphs, including Tikz code generation."
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "graph",
    "tikz",
    "latex",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/wxgeo/smallgraphlib"

[dependency-groups]
dev = [
    "pytest>=7,<8",
    "mypy>=1.8,<2",
    "black>=22.1.0,<23",
    "tox>=4.1.2,<5",
    "sphinx-autodoc-typehints>=1.18.3,<2",
    "sphinx-rtd-theme>=1.0.0,<2",
    "myst-parser>=0.18.0,<0.19",
    "sympy>=1.10.1,<2",
    "python-semantic-release==7.28.1",
    "ruff>=0.9.1",
    "numpy>=1.26.4,<2",
    "pytest-pythonhashseed>=1.0.1,<2",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.mypy]
implicit_optional = true
warn_unused_ignores = true
strict_equality = true

[tool.black]
line-length = 110

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"

[tool.ruff]
line-length = 110
fix = true

[tool.ruff.lint]
ignore = ["E203"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_latex_export.py" = ["E501"]



